# Lang-Efficient-SAM

./: .gitattributes  Notebook_example.ipynb  README.md  app.py  pyproject.toml  requirements.txt  setup.py  test_model.py
flagged/: log.csv
lang_efficient_sam/: LangEfficientSAM.py  __init__.py  lang_efficient_sam.py
lang_efficient_sam/utils/: draw_image.py
models/: efficientsam_s_cpu.jit  efficientsam_s_gpu.jit
